Bug 338099 - loan wizard doesn't show correct recipient
Summary: loan wizard doesn't show correct recipient
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-08-07 17:15 UTC by MK
Modified: 2014-09-24 19:44 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot of edit loan wizard (67.77 KB, image/png)
2014-08-07 17:15 UTC, MK
Details

Note You need to log in before you can comment on or make changes to this bug.
Description MK 2014-08-07 17:15:06 UTC
Created attachment 88149 [details]
screenshot of edit loan wizard

Edit loan wizard shows internal Pxxxxxxx "payee" value for recipient instead of name of recipient.

Steps to reproduce: Edit existing loan account and select "modify other loan information" radio button in account edit wizard. Continue clicking OK till final menu shows up. Recipient shows Pxxxxxxx value.
Comment 1 Cristian Oneț 2014-09-08 21:43:10 UTC
Git commit 46eee58f8cd88a1444e4b60fa1ec5adbe3db40b0 by Cristian Oneț.
Committed on 08/09/2014 at 21:41.
Pushed by conet into branch 'master'.

Display the payee name instead of the id on the summary page.

There are still some issues when going back from the summary page
and changing something but this should be in the scope of another
report.

M  +9    -3    kmymoney/wizards/newloanwizard/summarywizardpage.cpp

http://commits.kde.org/kmymoney/46eee58f8cd88a1444e4b60fa1ec5adbe3db40b0
Comment 2 Cristian Oneț 2014-09-08 21:43:46 UTC
Git commit 4f2774331e4fd5cb9c0f541c808a739a1d762faa by Cristian Oneț.
Committed on 08/09/2014 at 21:41.
Pushed by conet into branch 'frameworks'.

Display the payee name instead of the id on the summary page.

There are still some issues when going back from the summary page
and changing something but this should be in the scope of another
report.
(cherry picked from commit 46eee58f8cd88a1444e4b60fa1ec5adbe3db40b0)

M  +9    -3    kmymoney/wizards/newloanwizard/summarywizardpage.cpp

http://commits.kde.org/kmymoney/4f2774331e4fd5cb9c0f541c808a739a1d762faa
Comment 3 Christian David 2014-09-24 19:44:05 UTC
Git commit c7d033338be702e077894bef24352cb9010b476b by Christian Dávid, on behalf of Cristian Oneț.
Committed on 08/09/2014 at 21:41.
Pushed by christiand into branch 'add-onlinebanking'.

Display the payee name instead of the id on the summary page.

There are still some issues when going back from the summary page
and changing something but this should be in the scope of another
report.

M  +9    -3    kmymoney/wizards/newloanwizard/summarywizardpage.cpp

http://commits.kde.org/kmymoney/c7d033338be702e077894bef24352cb9010b476b