Display the payee name instead of the id on the summary page.

There are still some issues when going back from the summary page
and changing something but this should be in the scope of another
report.

BUG: 338099